# shulkerscript-cli

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release.yml  test.yml
assets/: default-main.shu
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  terminal_output.rs  util.rs
src/subcommands/: build.rs  clean.rs  compile.rs  init.rs  lang_debug.rs  migrate.rs  mod.rs  package.rs  watch.rs
