[package]
name = "shulkerscript-cli"
version = "0.1.0"
edition = "2021"

authors = ["Moritz Hölting <moritz@hoelting.dev>"]
categories = ["command-line-utilities", "compilers"]
description = "Command line tool to compile ShulkerScript projects"
repository = "https://github.com/moritz-hoelting/shulkerscript-cli"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "shulkerscript"
path = "src/main.rs"

[features]
default = ["zip", "lua", "watch"]
lang-debug = []
lua = ["shulkerscript/lua"]
watch = ["dep:notify-debouncer-mini", "dep:ctrlc"]
zip = ["shulkerbox/zip"]

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["deprecated", "derive", "env"] }
colored = "2.1.0"
const_format = "0.2.33"
ctrlc = { version = "3.4.5", optional = true }
dotenvy = "0.15.7"
git2 = { version = "0.19.0", default-features = false }
human-panic = "2.0.1"
# waiting for pull request to be merged
inquire = { git = "https://github.com/moritz-hoelting/rust-inquire.git", branch = "main", package = "inquire" }
notify-debouncer-mini = { version = "0.4.1", default-features = false, optional = true }
path-absolutize = "3.1.1"
pathdiff = "0.2.1"
serde = { version = "1.0.210", features = ["derive"] }
shulkerbox = { git = "https://github.com/moritz-hoelting/shulkerbox.git", default-features = false, rev = "4ca0505e357aa7427657d6286f8a1b77eb7e63c6" }
shulkerscript = { git = "https://github.com/moritz-hoelting/shulkerscript-lang.git", features = ["fs_access", "shulkerbox"], default-features = false, rev = "a3e0bd95bc35f2c880ca73e2bfebad95bb937254" }
thiserror = "1.0.63"
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
