[package]
name = "shulkerscript-cli"
version = "0.1.0"
edition = "2021"

authors = ["Moritz Hölting <moritz@hoelting.dev>"]
categories = ["command-line-utilities", "compilers"]
description = "Command line tool to compile ShulkerScript projects"
repository = "https://github.com/moritz-hoelting/shulkerscript-cli"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "shulkerscript"
path = "src/main.rs"

[features]
default = ["lua", "migrate", "watch", "zip"]
lang-debug = []
lua = ["shulkerscript/lua"]
migrate = ["dep:indoc", "dep:serde_json", "dep:walkdir"]
watch = ["dep:notify-debouncer-mini", "dep:ctrlc"]
zip = ["shulkerbox/zip"]

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["deprecated", "derive", "env"] }
colored = "2.1.0"
const_format = "0.2.33"
ctrlc = { version = "3.4.5", optional = true }
dotenvy = "0.15.7"
git2 = { version = "0.19.0", default-features = false }
human-panic = "2.0.1"
indoc = { version = "2.0.5", optional = true }
# waiting for pull request to be merged
inquire = { git = "https://github.com/moritz-hoelting/rust-inquire.git", branch = "main", package = "inquire" }
notify-debouncer-mini = { version = "0.4.1", default-features = false, optional = true }
path-absolutize = "3.1.1"
pathdiff = "0.2.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", optional = true }
shulkerbox = { git = "https://github.com/moritz-hoelting/shulkerbox.git", default-features = false, rev = "60458e6b2d719278c4fe090cb2759e123a3f86d2" }
shulkerscript = { git = "https://github.com/moritz-hoelting/shulkerscript-lang.git", features = ["fs_access", "shulkerbox"], default-features = false, rev = "c1a8bc8577c9ef8abff79734ebd5524a4f93afa7" }
thiserror = "1.0.63"
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
walkdir = { version = "2.5.0", optional = true }
