[package]
name = "shulkerscript-cli"
version = "0.1.0"
edition = "2021"

authors = ["Moritz Hölting <moritz@hoelting.dev>"]
description = "Command line tool to compile Shulkerscript projects"
categories = ["command-line-utilities", "compilers", "game-development"]
keywords = ["minecraft", "datapack", "mcfunction"]
repository = "https://github.com/moritz-hoelting/shulkerscript-cli"
homepage = "https://shulkerscript.hoelting.dev/"
readme = "README.md"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "shulkerscript"
path = "src/main.rs"

[features]
default = ["lua", "migrate", "watch", "zip"]
lang-debug = []
lua = ["shulkerscript/lua"]
migrate = ["dep:indoc", "dep:serde_json", "dep:walkdir"]
watch = ["dep:notify-debouncer-mini", "dep:ctrlc"]
zip = ["shulkerscript/zip"]

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["deprecated", "derive", "env"] }
colored = "2.1.0"
const_format = "0.2.33"
ctrlc = { version = "3.4.5", optional = true }
dotenvy = "0.15.7"
git2 = { version = "0.19.0", default-features = false }
human-panic = "2.0.1"
indoc = { version = "2.0.5", optional = true }
inquire = "0.7.5"
notify-debouncer-mini = { version = "0.4.1", default-features = false, optional = true }
path-absolutize = "3.1.1"
pathdiff = "0.2.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", optional = true }
shulkerscript = { git = "https://github.com/moritz-hoelting/shulkerscript-lang.git", features = ["fs_access", "shulkerbox", "zip"], default-features = false, rev = "a9a8aff13b0ad0986ee1bdf3d44b74676385dfcd" }
thiserror = "1.0.63"
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
walkdir = { version = "2.5.0", optional = true }
